--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <h1>I am at top of Root</h1>
     <div id="root"></div>
     <h1>I am at bottom of Root</h1>
-
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 
 </html>
